[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsync"
version = "0.0.1"
requires-python = ">=3.7"
dependencies = [
    "python-gitlab",
    "pyyaml",
    "gitpython",
    "PyGithub"
]
readme = 'README.md'

[project.scripts]
gitsync = "gitsynccmd:do_sync"
